--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Igor Bovaev</title>
 	<link rel="stylesheet" href="main.css">
+	<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="container">
-		<h1>Igor Bovaev 👾</h1>
+		<h1>Игорь Боваев 👾</h1>
 
 		<div class="item">
 			<img class="photo" src="me2.png" width="170" height="170" alt="Фото">
