--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Igor Bovaev</title>
 	<link rel="stylesheet" href="main.css">
-	<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body class="container">
