change_name_fix_eng

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<img class="photo" src="me2.png" width="170" height="170" alt="Фото">
 		</div>
 
-			<p>QA Ingineer и просто вьетнамский беженец</p>
+			<p>QA Engineer и просто вьетнамский беженец</p>
 
 			<h2>Связаться со мной:</h2>
 
