--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="container">
-		<h1>Игорь Трутестер 👾</h1>
+		<h1>Игорь Боваев 👾</h1>
 
 		<div class="item">
 			<img class="photo" src="me2.png" width="170" height="170" alt="Фото">
@@ -16,7 +16,7 @@
 
 			<p>QA Engineer и просто вьетнамский беженец</p>
 
-			<h2>Связаться со мной:</h2>
+			<h2>Контакты</h2>
 
 			<div class="contacts">
 
