--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<br>
 				<a href="mailto:bovaev.i@yandex.ru">Email</a>
 				<br>
-				<a href="резюме">HH resume</a>
+				<a href="резюме">HH</a>
 				<br>
 				<a href=" линк ">Linkedin</a>
 				<br>
