--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body class="container">
 
-		<h1>Игорь Боваев 👾</h1>
+		<h1>Игорь Боваев👾</h1>
 
 		<div class="item">
 			<img class="photo" src="me2.png" width="170" height="170" alt="Фото">
@@ -25,11 +25,9 @@
 				<br>
 				<a href="mailto:bovaev.i@yandex.ru">Email</a>
 				<br>
-				<a href="резюме">HH</a>
+				<a href="https://hh.ru/resume/56a37b03ff0afbaf2a0039ed1f335a79665246">HH</a>
 				<br>
-				<a href=" линк ">Linkedin</a>
-				<br>
-				<a href="https://github.com/NechromEN">Github</a>
+				<a href="https://github.com/NechromEN">Git</a>
 			</div>
 				<style type="text/css"> 
   button[name="run_script"] { 
