--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     border: none;
     border-radius: 7px;
     padding: 10px 25px;
-    background: #4B0082;
+    background: #5a1978;
     cursor: pointer;
     text-transform: uppercase;
     font-weight: bold;
     color: white;
   }
   button[name="run_script"]:hover { 
-    background: #FF00FF;
+    background: #800080
   } 
 </style>
 <button type="button" name="run_script">Цитатка</button>
