--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body class="container">
 
-		<h1>Игорь Боваев👾</h1>
+		<h1>Игорь Боваев🪲</h1>
 
 		<div class="item">
 			<img class="photo" src="me2.png" width="170" height="170" alt="Фото">
@@ -34,14 +34,14 @@
     border: none;
     border-radius: 7px;
     padding: 10px 25px;
-    background: #5a1978;
+    background: #2e2d88;
     cursor: pointer;
     text-transform: uppercase;
     font-weight: bold;
     color: white;
   }
   button[name="run_script"]:hover { 
-    background: #800080
+    background: #796878
   } 
 </style>
 <button type="button" name="run_script">Цитатка</button>
