--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body class="container">
 
-		<h1>Игорь Боваев🪲</h1>
+		<h1>Игорь Боваев 👾</h1>
 
 		<div class="item">
 			<img class="photo" src="me2.png" width="170" height="170" alt="Фото">
