--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<br>
 				<a href="https://hh.ru/resume/56a37b03ff0afbaf2a0039ed1f335a79665246">HH</a>
 				<br>
-				<a href="https://github.com/NechromEN">Git</a>
+				<a href="https://github.com/qabovaev">Git</a>
 			</div>
 				<style type="text/css"> 
   button[name="run_script"] { 
