--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 				<a href="https://hh.ru/resume/56a37b03ff0afbaf2a0039ed1f335a79665246">HH</a>
 				<br>
 				<a href="https://github.com/qabovaev">Git</a>
+				<br>
+				<a href="http://qabovaev.github.io/angryflappybird/">Поиграть Flappy Bird на JS</a>
 			</div>
 				<style type="text/css"> 
   button[name="run_script"] { 
